# emmaus-engine

./: pyproject.toml
src/emmaus_engine/: __init__.py
src/emmaus_engine/bible/: __init__.py  models.py
tests/: test_bible_reference.py
